--- a/public/index.html
+++ b/public/index.html
@@ -3,42 +3,35 @@
   <head>
     <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARUL Portfolio - 3D Thar Experience</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
-    <meta
-      name="description"
-      content="ARUL PALANIVEL - 3D interactive portfolio with a driving Thar in a desert environment."
-    />
+    <title>ARUL — Hunter Assassin Portfolio Game</title>
 
     <style>
-      /* Ensures body takes full space */
       html, body {
         margin: 0;
         padding: 0;
+        width: 100%;
         height: 100%;
         overflow: hidden;
-        background: #000;
+        background: #0b0e14;
+        touch-action: none; /* avoid accidental scrolling */
       }
 
       #root {
-        height: 100%;
         width: 100%;
+        height: 100%;
       }
 
-      /* Prevent text selection during steering */
-      body {
-        user-select: none;
+      canvas {
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
       }
     </style>
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <!-- React will mount here -->
     <div id="root"></div>
   </body>
 </html>
